--- a/src/css/Quotes.css
+++ b/src/css/Quotes.css
@@ -68,6 +68,24 @@ section#body{
     font-family: Tahoma;
     font-weight: normal;
 }
+
+span#errorT{
+    color: #8e8c8c;
+    font-size: 20px;
+    text-transform: lowercase;
+}
+
+span#error{
+    color: #ffa500;
+    text-align: center;
+    display: block;
+    letter-spacing: 2.5px;
+    text-transform: capitalize;
+    font-size: 14px;
+    border-bottom: 0.251px solid #e2e0e0;
+    padding: 15px 0;
+}
+
 section#footer{
     border-top:1px solid #e3e1e0;
     /* background-color: chartreuse; */
