--- a/src/css/Quotes.css
+++ b/src/css/Quotes.css
@@ -99,6 +99,15 @@ section#footer{
     min-height: 21.0vh;
 }
 
+section#footer {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 .footer{
     width: 99%;
     margin: 0 auto;
@@ -152,6 +161,7 @@ section#footer{
 }
 
 #close div#closeBtn,#close div#minBtn{
+    -webkit-app-region: no-drag;
     width: 5%;
     text-align: center;
     float: right;
